<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dividerGap"
    android:layout_height="wrap_content">

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/camera"
        app:title="@string/camera"/>

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsPaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/paint"
        app:title="@string/paint"/>

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/record"
        app:title="@string/record"/>

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/web"
        app:title="@string/web"/>

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/gallery"
        app:title="@string/gallery"/>

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsChooseVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/video_folder"
        app:title="@string/choose_video"/>

    <com.dididi.packrat.ui.widget.WithIconTextView
        android:id="@+id/dialogCollectEditToolsChooseFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@mipmap/file_folder"
        app:title="@string/choose_file"/>

</LinearLayout>