<?xml version="1.0" encoding="utf-8"?>
<!--注册页面-->
<RelativeLayout android:id="@+id/fragmentLoginSignUpLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:alpha="0"
    android:visibility="invisible"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--用户注册文字-->
    <TextView
        android:id="@+id/fragmentLoginSignUpLayoutRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/screenLRGap"
        android:text="@string/user_sign_up"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/smallTitleSize" />
    <!--用户账户输入框-->
    <EditText
        android:id="@+id/fragmentLoginSignUpLayoutAccount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginSignUpLayoutRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/dividerGap"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--用户密码输入框-->
    <EditText
        android:id="@+id/fragmentLoginSignUpLayoutPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginSignUpLayoutAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/dividerGap"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--再次输入密码输入框-->
    <EditText
        android:id="@+id/fragmentLoginSignUpLayoutReenterPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginSignUpLayoutPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/elementGap"
        android:gravity="center"
        android:hint="@string/hint_rePassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--注册按钮-->
    <Button
        android:id="@+id/fragmentLoginSignUpLayoutSignUp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/fragmentLoginSignUpLayoutReenterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/elementGap"
        android:background="@drawable/sign_button_corner"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/buttonTextSize" />
    <!--返回登录页面-->
    <TextView
        android:id="@+id/fragmentLoginSignUpLayoutBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginSignUpLayoutSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/elementGap"
        android:text="@string/back"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/textSmallSize" />

</RelativeLayout>