<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/fragmentLoginForgetPasswordLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:alpha="0"
    android:visibility="invisible"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--找回密码文字-->
    <TextView
        android:id="@+id/fragmentLoginForgetPasswordLayoutForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/screenLRGap"
        android:text="@string/find_password"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/smallTitleSize" />
    <!--用户账户输入框-->
    <EditText
        android:id="@+id/fragmentLoginForgetPasswordLayoutAccount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginForgetPasswordLayoutForgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/dividerGap"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--验证码输入框-->
    <EditText
        android:id="@+id/fragmentLoginForgetPasswordLayoutVerify"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginForgetPasswordLayoutAccount"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/screenLRGap"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/elementGap"
        android:gravity="center"
        android:hint="@string/hint_verify"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--发送验证码按钮-->
    <Button
        android:id="@+id/fragmentLoginForgetPasswordLayoutSendVerify"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginForgetPasswordLayoutAccount"
        android:layout_alignTop="@id/fragmentLoginForgetPasswordLayoutVerify"
        android:layout_alignBottom="@id/fragmentLoginForgetPasswordLayoutVerify"
        android:layout_marginEnd="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_toEndOf="@id/fragmentLoginForgetPasswordLayoutVerify"
        android:layout_toRightOf="@id/fragmentLoginForgetPasswordLayoutVerify"
        android:background="@color/backgroundColorWhite"
        android:gravity="center"
        android:text="@string/send"
        android:textSize="@dimen/textNormalSize" />
    <!--下一步按钮-->
    <Button
        android:id="@+id/fragmentLoginForgetPasswordLayoutNext"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/fragmentLoginForgetPasswordLayoutVerify"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/elementGap"
        android:background="@drawable/sign_button_corner"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/buttonTextSize" />
    <!--返回登录按钮-->
    <TextView
        android:id="@+id/fragmentLoginForgetPasswordLayoutBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginForgetPasswordLayoutNext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/elementGap"
        android:text="@string/back"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/textSmallSize" />

</RelativeLayout>