<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/fragmentLoginResetPasswordLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:alpha="0"
    android:visibility="invisible"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--重设密码文字-->
    <TextView
        android:id="@+id/fragmentLoginResetPasswordLayoutForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/screenLRGap"
        android:text="@string/reset_password"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/smallTitleSize" />
    <!--重设密码输入框-->
    <EditText
        android:id="@+id/fragmentLoginResetPasswordLayoutPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginResetPasswordLayoutForgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/dividerGap"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--确认密码输入框-->
    <EditText
        android:id="@+id/fragmentLoginResetPasswordLayoutReenterPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginResetPasswordLayoutPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/screenLRGap"
        android:layout_marginRight="@dimen/screenLRGap"
        android:layout_marginBottom="@dimen/dividerGap"
        android:gravity="center"
        android:hint="@string/hint_rePassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/textSmallSize" />
    <!--登录按钮-->
    <Button
        android:id="@+id/fragmentLoginResetPasswordLayoutLogin"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/fragmentLoginResetPasswordLayoutReenterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/elementGap"
        android:background="@drawable/sign_button_corner"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/buttonTextSize" />
    <!--返回找回密码页面-->
    <TextView
        android:id="@+id/fragmentLoginResetPasswordLayoutBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentLoginResetPasswordLayoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/elementGap"
        android:text="@string/back"
        android:textColor="@color/textColorBlack"
        android:textSize="@dimen/textSmallSize" />

</RelativeLayout>