<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentCollectContentRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_collect_text" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fragmentCollectFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dividerGap"
        android:src="@mipmap/ic_add_white"
        app:fab_colorNormal="@color/textColorRed"
        app:fab_colorPressed="@color/buttonNormalColorRed"
        app:fab_colorRipple="@color/rippleRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu_labels_colorNormal="@color/textColorLight"
        app:menu_labels_padding="@dimen/dividerGap"
        app:menu_labels_paddingLeft="@dimen/dividerGap"
        app:menu_labels_paddingRight="@dimen/dividerGap"
        app:menu_labels_position="left"
        app:menu_labels_showShadow="false"
        app:menu_labels_textColor="@color/textColorBlack"
        app:menu_labels_textSize="@dimen/textNormalSize">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragmentCollectFabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_text"
            app:fab_label="@string/text"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragmentCollectFabWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_web"
            app:fab_label="@string/web"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragmentCollectFabImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_gallery"
            app:fab_label="@string/picture"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fragmentCollectFabAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_record"
            app:fab_label="@string/record"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.constraintlayout.widget.ConstraintLayout>